# FMusicCLI

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: globals.h  main.cpp
src/apiplatform/: MusicAPI.cpp  MusicAPI.hpp  NetEase.cpp  NetEase.h
src/cfgtools/: Config.h  IniParser.h
src/network/: JsonTool.hpp  NetWorkManager.cpp  NetWorkManager.h
src/utils/: MP3.hpp  MusicTool.cpp  MusicTool.hpp
